Adding a jupyter motebook mortgage prediction

--- a/assets/mortgage-001/MortgageNotebook.jupyter-py36.ipynb
+++ b/assets/mortgage-001/MortgageNotebook.jupyter-py36.ipynb
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Save the notebook and switch to the Models tab of the project (hint: right click the project name link, DSX_Lo, at the top, and open with another tab in your browser).\n",
+    "1. Save the notebook and switch to the Models tab of the project (hint: right click the project name link, mortgage_data, at the top, and open with another tab in your browser).\n",
     "2. Under Models, find and click into your saved model.\n",
     "3. Click the Test link to *Real-time score* the model. You can use the data for testing that already loaded: \n",
     "![image.png](attachment:image.png)"
