--- a/assets/mortgage-002/MortgageNotebook.V25.jupyter-py36.ipynb
+++ b/assets/mortgage-002/MortgageNotebook.V25.jupyter-py36.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "!pip install findspark\n",
-    "!pip install pyspark"
+    "!pip install pyspark==2.3.3"
    ]
   },
   {
